fixed spacing issue with release date

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -281,7 +281,8 @@ span.overlay span {
       top: 100px;
     }
 
-    &:nth-child(3) {
+    &:nth-child(4) {
+      margin-top: 0;
       margin-bottom: 20px;
     }
   }
